--- a/packages/default/scss/scheduler/_layout.scss
+++ b/packages/default/scss/scheduler/_layout.scss
@@ -655,9 +655,7 @@
 
 
     // Workweek view
-    // sass-lint:disable class-name-format
-    .k-scheduler-workWeekview {}
-    // sass-lint:enable class-name-format
+    .k-scheduler-workWeekview {} // stylelint-disable-line
 
 
     // Week view
