--- a/packages/default/scss/table/_layout.scss
+++ b/packages/default/scss/table/_layout.scss
@@ -64,7 +64,7 @@
     // Table header
     .k-table-header {
         padding-inline-end: var(--kendo-scrollbar-width);
-        border-width: 0 0 1px 0;
+        border-width: 0 0 1px;
         border-style: solid;
         box-sizing: border-box;
 
@@ -195,7 +195,7 @@
     // Table footer
     .k-table-footer {
         padding-inline-end: var(--kendo-scrollbar-width);
-        border-width: 1px 0 0 0;
+        border-width: 1px 0 0;
         border-style: solid;
         box-sizing: border-box;
 
