--- a/packages/fluent/scss/color-preview/_layout.scss
+++ b/packages/fluent/scss/color-preview/_layout.scss
@@ -12,8 +12,7 @@
         box-sizing: border-box;
         border-style: solid;
         display: inline-flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
+        flex-flow: row nowrap;
         position: relative;
         overflow: hidden;
 
