--- a/packages/fluent/scss/core/mixins/_decoration.scss
+++ b/packages/fluent/scss/core/mixins/_decoration.scss
@@ -19,8 +19,7 @@
     @if $gradient and $kendo-enable-gradients {
         @if $gradient == none {
             background-image: none;
-        }
-        @else {
+        } @else {
             background-image: linear-gradient( $gradient );
         }
     }
