--- a/packages/fluent/scss/editor/_theme.scss
+++ b/packages/fluent/scss/editor/_theme.scss
@@ -63,7 +63,7 @@
             $border: var( --kendo-editor-resize-handle-border, #{$kendo-editor-resize-handle-border} )
        );
     }
-    .ProseMirror-selectednode { // sass-lint:disable-line class-name-format
+    .ProseMirror-selectednode { // stylelint-disable-line
         outline-color: var( --kendo-editor-selectednode-outline-color, #{$kendo-editor-selectednode-outline-color} );
     }
 
@@ -110,7 +110,7 @@
             border-color: #dddddd;
         }
 
-        .selectedCell::after { // sass-lint:disable-line class-name-format
+        .selectedCell::after { // stylelint-disable-line
             background-color: rgba(200, 200, 255, .4);
         }
     }
