--- a/packages/fluent/scss/floating-label/_layout.scss
+++ b/packages/fluent/scss/floating-label/_layout.scss
@@ -57,7 +57,7 @@
         }
 
 
-        &.k-empty:not(.k-focus):not(:focus-within) ::placeholder {
+        &.k-empty:not(.k-focus, :focus-within) ::placeholder {
             color: transparent;
         }
 
