--- a/packages/fluent/scss/loader/_variables.scss
+++ b/packages/fluent/scss/loader/_variables.scss
@@ -26,7 +26,7 @@ $kendo-loader-lg-padding-y: math.div( $kendo-loader-lg-segment-size, 2 ) !defaul
 
 /// Equilateral height of the loader.
 /// @group loader
-$kendo-loader-equilateral-height: .8660254038 !default;
+$kendo-loader-equilateral-height: .8660 !default;
 
 /// Width of the spinner-3 loader.
 /// @group loader
