--- a/packages/fluent/scss/spreadsheet/_layout.scss
+++ b/packages/fluent/scss/spreadsheet/_layout.scss
@@ -854,7 +854,7 @@
             position: absolute;
             transform: translate(-50%, -50%);
 
-            // sass-lint:disable class-name-format, one-declaration-per-line
+            // stylelint-disable selector-class-pattern, declaration-block-single-line-max-declarations
             &.N { inset-inline-start: 50%; inset-block-start: 0; cursor: ns-resize; }
             &.NE { inset-inline-start: 100%; inset-block-start: 0; cursor: nesw-resize; }
             &.E { inset-inline-start: 100%; inset-block-start: 50%; cursor: ew-resize; }
@@ -863,7 +863,7 @@
             &.SW { inset-inline-start: 0; inset-block-start: 100%; cursor: nesw-resize; }
             &.W { inset-inline-start: 0; inset-block-start: 50%; cursor: ew-resize; }
             &.NW { inset-inline-start: 0; inset-block-start: 0; cursor: nwse-resize; }
-            // sass-lint:enable class-name-format, one-declaration-per-line
+            // stylelint-enable selector-class-pattern, declaration-block-single-line-max-declarations
         }
 
         .k-spreadsheet-insert-image-dialog {
