--- a/packages/fluent/scss/editor/_layout.scss
+++ b/packages/fluent/scss/editor/_layout.scss
@@ -127,12 +127,13 @@
         }
     }
 
-    .ProseMirror-selectednode { // sass-lint:disable-line class-name-format
+    .ProseMirror-selectednode { // stylelint-disable-line
         outline-width: var( --kendo-editor-selectednode-outline-width, #{$kendo-editor-selectednode-outline-width} );
         outline-style: solid;
     }
 
-    .ProseMirror-hideselection { // sass-lint:disable-line class-name-format
+    // stylelint-disable selector-no-vendor-prefix ,selector-class-pattern
+    .ProseMirror-hideselection {
         caret-color: transparent;
 
         *::selection,
@@ -140,6 +141,7 @@
             background: transparent;
         }
     }
+    // stylelint-enable selector-no-vendor-prefix ,selector-class-pattern
 
 
     // Тoolbar
@@ -174,7 +176,7 @@
             display: block;
         }
 
-        > .ProseMirror { // sass-lint:disable-line class-name-format
+        > .ProseMirror { // stylelint-disable-line
             padding: $kendo-padding-md-x;
             width: 100%;
             height: 100%;
@@ -238,7 +240,7 @@
         }
 
         // Give selected cells a blue overlay
-        .selectedCell::after { // sass-lint:disable-line class-name-format
+        .selectedCell::after { // stylelint-disable-line
             z-index: 2;
             position: absolute;
             content: "";
