--- a/packages/fluent/scss/grid/_variables.scss
+++ b/packages/fluent/scss/grid/_variables.scss
@@ -581,4 +581,4 @@ $kendo-grid-row-resizer-hover-bg: get-theme-color-var( neutral-90 ) !default;
 $kendo-grid-row-resizer-active-bg: get-theme-color-var( primary-100 ) !default;
 /// Height of the grid row resize indicator
 /// @group grid
-$kendo-grid-row-resizer-height: map-get( $kendo-spacing, 0.5 ) !default;
+$kendo-grid-row-resizer-height: map.get( $kendo-spacing, 0.5 ) !default;
