--- a/packages/fluent/scss/scheduler/_theme.scss
+++ b/packages/fluent/scss/scheduler/_theme.scss
@@ -55,7 +55,7 @@
     }
 
 
-    //Scheduler navigation
+    // Scheduler navigation
     .k-scheduler-navigation {}
 
 
@@ -162,9 +162,7 @@
 
 
     // Workweek view
-    // sass-lint:disable class-name-format
-    .k-scheduler-workWeekview {}
-    // sass-lint:enable class-name-format
+    .k-scheduler-workWeekview {} // stylelint-disable-line
 
 
     // Week view
