--- a/packages/fluent/scss/timeline/_layout.scss
+++ b/packages/fluent/scss/timeline/_layout.scss
@@ -23,7 +23,7 @@
         }
 
         ul {
-            margin: 0 0 1px 0;
+            margin: 0 0 1px;
             padding: 0;
 
             li {
