--- a/packages/fluent/scss/upload/_variables.scss
+++ b/packages/fluent/scss/upload/_variables.scss
@@ -35,10 +35,10 @@ $kendo-upload-dropzone-padding-x: map.get( $kendo-spacing, 2 ) !default;
 $kendo-upload-dropzone-padding-y: map.get( $kendo-spacing, 2 ) !default;
 /// Background color of the upload dropzone.
 /// @group upload
-$kendo-upload-dropzone-bg: get-theme-color-var( neutral-10 ) !default; // header-bg
+$kendo-upload-dropzone-bg: get-theme-color-var( neutral-10 ) !default;
 /// Text color of the upload dropzone.
 /// @group upload
-$kendo-upload-dropzone-text: get-theme-color-var( neutral-130 ) !default; //$kendo-component-header-text
+$kendo-upload-dropzone-text: get-theme-color-var( neutral-130 ) !default;
 /// Border color of the upload dropzone.
 /// @group upload
 $kendo-upload-dropzone-border: get-theme-color-var( neutral-30 ) !default;
