--- a/packages/material/scss/scheduler/_layout.scss
+++ b/packages/material/scss/scheduler/_layout.scss
@@ -46,9 +46,9 @@
             }
         }
 
+        // Angular fix for stronger selector and smaller padding
         .k-event-template {
-            // Angular fix for stronger selector and smaller padding
-            & {
+            & { // stylelint-disable-line
                 padding-block: $kendo-padding-sm-y;
                 padding-inline: $kendo-padding-sm-x;
             }
@@ -61,6 +61,7 @@
 
     $handle-size: 2px;
     $handle-half-size: k-math-div( $handle-size, 2 );
+
     .k-event {
         .k-event-delete {
             border-radius: 50%;
