--- a/packages/material/scss/input/_layout.scss
+++ b/packages/material/scss/input/_layout.scss
@@ -76,10 +76,7 @@
             display: block;
             position: absolute;
             z-index: 2;
-            top: -1px;
-            bottom: -1px;
-            left: -1px;
-            right: -1px;
+            inset: -1px;
             opacity: 0;
             transform: scaleX(0);
             transition: opacity .3s, transform .3s;
