chore(nouvelle): resolve stylelint errors

--- a/packages/nouvelle/scss/checkbox/_layout.scss
+++ b/packages/nouvelle/scss/checkbox/_layout.scss
@@ -84,9 +84,7 @@
 
     // Focus state
     .k-checkbox:focus,
-    .k-checkbox.k-focus {
-        //
-    }
+    .k-checkbox.k-focus {}
 
 
     // Checked state
