--- a/packages/utils/scss/transform/_scale.scss
+++ b/packages/utils/scss/transform/_scale.scss
@@ -16,7 +16,7 @@
 /// @group transform
 /// @contextType css
 
-// sass-lint:disable function-name-format
+// stylelint-disable scss/at-function-pattern
 @function __scale( $val ) {
     @return scale( $val );
 }
@@ -26,7 +26,7 @@
 @function __scale-y( $val ) {
     @return scaleY( $val );
 }
-// sass-lint:enable function-name-format
+// stylelint-enable scss/at-function-pattern
 
 @mixin kendo-utils--transform--scale() {
 
