--- a/packages/utils/scss/transform/_translate.scss
+++ b/packages/utils/scss/transform/_translate.scss
@@ -52,7 +52,7 @@
 /// @group transform
 /// @contextType css
 
-// sass-lint:disable function-name-format
+// stylelint-disable scss/at-function-pattern
 @function __translate( $val ) {
     @return translate( $val );
 }
@@ -62,7 +62,7 @@
 @function __translate-y( $val ) {
     @return translateY( $val );
 }
-// sass-lint:enable function-name-format
+// stylelint-enable scss/at-function-pattern
 
 @mixin kendo-utils--transform--translate() {
 
