--- a/packages/fluent/scss/grid/_layout.scss
+++ b/packages/fluent/scss/grid/_layout.scss
@@ -1344,4 +1344,16 @@
         flex: 1 1 auto;
     }
 
+    .k-rtl .k-grid-virtual .k-grid-content,
+    [dir="rtl"] .k-grid-virtual .k-grid-content,
+    .k-rtl.k-grid-virtual .k-grid-content,
+    [dir="rtl"].k-grid-virtual .k-grid-content {
+
+        .k-grid-table-wrap,
+        .k-grid-table,
+        > .k-height-container {
+            float: right;
+        }
+    }
+
 }
