--- a/packages/default/scss/menu/_layout.scss
+++ b/packages/default/scss/menu/_layout.scss
@@ -90,7 +90,7 @@
         flex-direction: row;
 
         > .k-menu-item + .k-menu-item {
-            margin-left: $kendo-menu-item-spacing;
+            margin-inline-start: $kendo-menu-item-spacing;
         }
 
         > .k-separator {
@@ -115,7 +115,7 @@
         > .k-menu-item > .k-menu-link {
             padding-block: $kendo-menu-popup-item-padding-y;
             padding-inline: $kendo-menu-popup-item-padding-x;
-            padding-right: $kendo-menu-popup-item-padding-end;
+            padding-inline-end: $kendo-menu-popup-item-padding-end;
         }
 
         > .k-menu-item > .k-menu-link > .k-menu-expand-arrow {
@@ -307,70 +307,33 @@
 
             &.k-scroll-left {
                 top: 0;
-                left: 0;
+                inset-inline-start: 0;
                 height: 100%;
                 width: 16px;
                 border-right-width: 1px;
             }
             &.k-scroll-right {
                 top: 0;
-                right: 0;
+                inset-inline-end: 0;
                 height: 100%;
                 width: 16px;
                 border-left-width: 1px;
             }
             &.k-scroll-up {
                 top: 0;
-                left: 0;
+                inset-inline-start: 0;
                 width: 100%;
                 height: 16px;
                 border-bottom-width: 1px;
             }
             &.k-scroll-down {
                 bottom: 0;
-                left: 0;
+                inset-inline-start: 0;
                 width: 100%;
                 height: 16px;
                 border-top-width: 1px;
             }
         }
-    }
-
-
-    // RTL
-    .k-rtl,
-    [dir="rtl"] {
-
-        // Orientation -- horizontal
-        .k-menu-horizontal {
-
-            > .k-menu-item + .k-menu-item {
-                margin-right: $kendo-menu-item-spacing;
-                margin-left: 0;
-            }
-        }
-
-
-        // Orientation -- vertical
-        .k-menu-vertical {
-
-            > .k-menu-item > .k-menu-link {
-                padding-right: $kendo-menu-popup-item-padding-x;
-                padding-left: $kendo-menu-popup-item-padding-end;
-            }
-        }
-
-
-        // Sub menu
-        .k-menu-group {
-
-            .k-menu-link {
-                padding-right: $kendo-menu-popup-item-padding-x;
-                padding-left: $kendo-menu-popup-item-padding-end;
-            }
-
-        }
-
     }
 
 }
