--- a/packages/fluent/scss/forms/_layout.scss
+++ b/packages/fluent/scss/forms/_layout.scss
@@ -47,8 +47,8 @@
     .k-form {
         border: 0;
 
-        .k-label,
-        kendo-label,
+        .k-form-field > .k-label,
+        .k-form-field > kendo-label,
         .k-form-label {
             margin-block-end: var( --kendo-form-label-margin-bottom, #{$kendo-form-label-margin-bottom} );
             display: flex;
