fix(icon): wrong icon size when svg is used with k-icon-modifier

--- a/packages/default/scss/icons/_layout.scss
+++ b/packages/default/scss/icons/_layout.scss
@@ -45,6 +45,10 @@ $ki-icon-size: $kendo-icon-size;
         right: 0;
         margin: 0 -.5em -.5em 0;
     }
+    .k-svg-icon.k-icon-modifier {
+        width: 1em;
+        height: 1em;
+    }
 
     .k-i-none::before {
         content: "";
