--- a/packages/fluent/scss/icon/_layout.scss
+++ b/packages/fluent/scss/icon/_layout.scss
@@ -26,6 +26,10 @@
         right: 0;
         margin: 0 -.5em -.5em 0;
     }
+    .k-svg-icon.k-icon-modifier {
+        width: 1em;
+        height: 1em;
+    }
 
     // RTL icons
     .k-rtl,
