fix(pdf-viewer): wrong cursor in search panel

--- a/packages/fluent/scss/pdf-viewer/_layout.scss
+++ b/packages/fluent/scss/pdf-viewer/_layout.scss
@@ -160,6 +160,7 @@
         border-style: solid;
         border-radius: var( --kendo-pdf-viewer-search-panel-border-radius, #{$kendo-pdf-viewer-search-panel-border-radius} );
         z-index: 10;
+        cursor: default;
     }
 
     // Alias
