--- a/packages/default/scss/pdf-viewer/_layout.scss
+++ b/packages/default/scss/pdf-viewer/_layout.scss
@@ -159,6 +159,7 @@
         border-style: solid;
         border-radius: $kendo-pdf-viewer-search-panel-border-radius;
         z-index: 10;
+        cursor: default;
     }
 
     // Alias
